get2gnow #00EEECaC2 - final features froze & under creation
I'm continuing to chip away at adding caching support, w/o breaking anything LOL.  Right now there are some issues with building cache file names in a way that they can easily be clean-up.  This will be easy to resolve but since its really a shiny *final touch* kinda fix, well I wanna save it until right before I'm ready for release.

Other wise I'm adding my two final features.  1st is just a list store / combo box combination that gives you access to your last 50 tweets.  I'll be making that into a preference but for now its just a constant.

My bigger, better, & 'has me giddy' new feature is my 'best friends' list view.  I've added a widget to the selected tweet area that let's you mark someone you're following as a 'best friend'. When they post a new update, since the last time you loaded get2gnow, their name appears in bold in the 'best friends updates' list. Clicking on their name opens a new tab an displaying their updates. But my fave part of this feature is my new 'best friends' tab which is just another TweetView but instead of displaying a timeline it displays your 'best friends' most recent updates.

I've also changed how maximum & minimum tweets are displayed for DMs, Replies, and 'Best Friends'.  All DMs & Replies are loaded when get2gnow starts, which I need to fix w/a preference so they're limited to say 'Show me replies from the last 1-14day' & 'Show me my Direct Messages from the last 1-7 days, 3-4 weeks, or 1-3months.  I'm still working on my 'best friends' feature, so for now its currently disabled.  I prolly have it working by the time I make my next commit...whenever that turns out to be.

No day turns out how I expect...so I expect nothing from any day & only hope to soon stop not expecting...or to have something that I've gotten used, maybe even gotten used to something that doesn't suck.  Though I don't care either so long as I stop expecting any thing, stop hoping for any thing, & 

--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -263,26 +263,26 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/get2gnow/notifications/replies</key>
-			<applyto>/apps/get2gnow/notifications/replies</applyto>
+			<key>/schemas/apps/get2gnow/notifications/best_friends</key>
+			<applyto>/apps/get2gnow/notifications/best_friends</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
 			<default>true</default>
 			<locale name="C">
-				<short>Show notification for ynew messages from someone you follow</short>
-				<long>Show notification for all new messages posted by any one the user is following.</long>
+				<short>Show notification for new messages from one of my 'best friends'</short>
+				<long>Show notification for all new messages from one of my 'best friends'.</long>
 			</locale>
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/get2gnow/notifications/replies</key>
-			<applyto>/apps/get2gnow/notifications/replies</applyto>
+			<key>/schemas/apps/get2gnow/notifications/following</key>
+			<applyto>/apps/get2gnow/notifications/following</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
 			<default>true</default>
 			<locale name="C">
-				<short>Show notification for new messages containing @username</short>
-				<long>Show notification of new messages where the user is beng replied to or talked to.</long>
+				<short>Show notification for new messages from someone you follow</short>
+				<long>Show notification for new messages posted by any one you're following.</long>
 			</locale>
 		</schema>
 		
@@ -295,6 +295,18 @@
 			<locale name="C">
 				<short>Show notification of direct messages</short>
 				<long>Show notification of new direct messages sent directly to you.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/notifications/replies</key>
+			<applyto>/apps/get2gnow/notifications/replies</applyto>
+			<owner>get2gnow</owner>
+			<type>bool</type>
+			<default>true</default>
+			<locale name="C">
+				<short>Show notification for new messages containing @username</short>
+				<long>Show notification of new messages where the user is beng replied to or talked to.</long>
 			</locale>
 		</schema>
 		
