get2gnow #00EEECaC4 - *special thnx* & buildable or bust!
First before I go into what I've done with this commit there are several people I *need* to thank for helping me find & spark my motivation toward get2gnow - most _vitally_ by validating it & above all by helping to get2gnow out there.  Special thnx to @znmeb, on twitter, @PingJocky, @PegWole, & @LordDrachenblut (on identi.ca & twitter).  Thank you for your help.  And special thnx to those who've just kept me afloat period: @katebornstein, @ElizabethN, @dananner, @elazar, @dshafik, & @dragonsangel (all on Twitter).  To you all I can't thank you enough.

Now on to what I've done with this commit.

I've 'unimplemented' cookie support for now.  get2gnow doesn't rely on cookies to do anything & luckily neither Laconica nor Twitter require cookies.  Having integrated cookies does speed up requests & gives me options for future features.  However libsoup's cookie jar support is only implement in libsoup-2.4 2.16.1 and I've found out few distros, if any, 'ship' with 2.16.1.  Few even have it available.  So for now I've stepped back what & how I'm implementing libsoup's various 'newwer' features so I haven't gotten rid of any of my future proof code nor my advanced features.  I've simply disabled them or programmed so over-riding macros so libsoup-2.4 2.24.0 and above will work...well that's except for libsoup-2.4 2.17, which was still broke when I last tested against it which was about 2wks ago.

I've improved how long, and by extension how many, DMs, Replies, & 'Best Friend Updates' are retrieved when loading previous updates.  Now they have expriration dates.  These are preferences, though right now they are still hard coded.  I need to implement the preferences UI for selecting how long they're kept.  But at least, even hard coded, they've improved get2gnow's efficiancy & avoids bloating.

Than I've improved several UI rendering when it comes to get2gnow render URL, @ links, & how they're displayed by get2gnow's 

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], ["#00EEECaC2"], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
+AC_INIT([get2gnow], ["#00EEECaC4"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -35,7 +35,7 @@ dnl Library Dependencies, uses pkg-config to detect correct version, etc
 dnl
 dnl -----------------------------------------------------------
 
-LIBSOUP_VERSION_REQUIRED=2.26.1
+LIBSOUP_VERSION_REQUIRED=2.24.0
 LIBXML_VERSION_REQUIRED=2.6.16
 GTK_VERSION_REQUIRED=2.12.12
 GCONF_VERSION_REQUIRED=1.2.0
@@ -77,7 +77,7 @@ PKG_CHECK_MODULES(get2gnow,
 [
 	libsexy
 	openssl
-	libsoup-2.4 = $LIBSOUP_VERSION_REQUIRED
+	libsoup-2.4 >= $LIBSOUP_VERSION_REQUIRED
 	libnotify
 	gnome-vfs-2.0
 	gtk+-2.0 >= $GTK_VERSION_REQUIRED
