get2gnow #00EEECaC3 @ 2009-07-27.01
I've fixed the problems with preferences dialog crashing get2gnow. LOL it turn out it was all just do to a missing 'e' in one of my GtkBuilder UI files. Now all is well.  This bug was created by making what get's replaced when one enters '/me' in their updates.  It can now be replaced with nothing, one's user name/login, or one's nick name - this is what the user has saved(on Twitter.Com, Identi.Ca, or etc) as their 'display/nick name'.  This is retrieved and set during the login process by requesting & parsing the user's profile xml.  This is part of my extended libsoup callback support.

I've also done more work on my best friends feature, though very lil.  I have sadly very lil new in this update, mostly just bug fixes & artistic improvements.

I've been lacking any inspiration for a while.  Mostly because I've had to be honest w/myself and face just how much my Generalized Dystonia effects me & just how much more work its for me to truly take care of myself.  And I was highly unsatisfied with how I was taking care of myself which sent me into about two to six weeks of deep depression.

I'm still climbing out of that pit of dispare...well honestly I'm still at the bottom, but I've gotten up & I'm ready to try to start climbing again w/the intent of finding something more.

My 'something more' is primarily game programming & even more so 'getting out' more.  Especially to local meet-ups or any thing else that I'll be able to - as I take better care of myself, and that now sadly includes accepting what Generalized Dystonia does to me & what I have to do to deal with it & to, each day, recover from what its done.

I'm aiming for a better quality of life.  That also includes getting in to see more specialist and focusing on hiring more PCAs(primary care attendants).  This is also taking up much of my time & even more of my energy, especially emotionally.

With each email to a care taker I have to accept & write in detail just how m

--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -146,38 +146,47 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/get2gnow/xml-cache/archive/dms</key>
-			<applyto>/apps/get2gnow/xml-cache/archive/dms</applyto>
+			<key>/schemas/apps/get2gnow/online-services/xml-cache/archive/expiration/dms</key>
+			<applyto>/apps/get2gnow/online-services/xml-cache/archive/expiration/dms</applyto>
 			<owner>get2gnow</owner>
 			<type>int</type>
 			<default>2419200</default>
 			<locale name="C">
 				<short>Seconds to keep retrieving DMs since</short>
-				<long>Seconds to keep retrieving DMs since.  By default DMs from the last 4 weeks are loaded.</long>
+				<long>
+					Seconds to keep retrieving DMs since.
+					By default DMs from the last 4 weeks are loaded.
+				</long>
 			</locale>
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/get2gnow/xml-cache/archive/replies</key>
-			<applyto>/apps/get2gnow/xml-cache/archive/replies</applyto>
+			<key>/schemas/apps/get2gnow/online-services/xml-cache/archive/expiration/replies</key>
+			<applyto>/apps/get2gnow/online-services/xml-cache/archive/expiration/replies</applyto>
 			<owner>get2gnow</owner>
 			<type>int</type>
 			<default>604800</default>
 			<locale name="C">
 				<short>Seconds to keep retrieving replies since</short>
-				<long>Seconds to keep retrieving replies since.  By default Replies, &amp; @ Mentions, from the last 14 days are loaded.</long>
+				<long>
+					Seconds to keep retrieving replies since.
+					By default Replies, &amp; @ Mentions, from the last 7 days are loaded.
+				</long>
 			</locale>
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/get2gnow/xml-cache/archive/best_friends</key>
-			<applyto>/apps/get2gnow/xml-cache/archive/best_friends</applyto>
+			<key>/schemas/apps/get2gnow/online-services/xml-cache/archive/expiration/best_friends</key>
+			<applyto>/apps/get2gnow/online-services/xml-cache/archive/expiration/best_friends</applyto>
 			<owner>get2gnow</owner>
 			<type>int</type>
 			<default>86400</default>
 			<locale name="C">
 				<short>Seconds to keep retrieving the user's best friends' updates since</short>
-				<long>Seconds to keep retrieving the user's best friends' updates since.  By default &quot;Best Friends' Updates&quot; from the last 24 hrs are loaded.</long>
+				<long>
+					Seconds to keep retrieving the user's best friends' updates since.
+					By default &quot;Best Friends' Updates&quot; from the last 24 hrs are loaded.
+				</long>
 			</locale>
 		</schema>
 		
