--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -56,10 +56,16 @@ DISTCLEANFILES =						\
 			$(schemas_DATA)
 
 
-gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+gtk_update_icon_test=$(datadir)/icons/hicolor/scalable/apps/get2gnow.svg
+ifeq ($(gtk_update_icon_test),$(datadir)/icons/hicolor/scalable/apps/get2gnow.svg)
+	gtk_update_icon_cache=gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+else
+	gtk_update_icon_cache="get2gnow's icon is already installed."
+endif
 
 install-data-hook: update-icon-cache
 uninstall-hook: update-icon-cache
+install-data: update-icon-cache install-data-am
 update-icon-cache:
 	@-if test -z "$(DESTDIR)"; then \
 		echo "Updating Gtk icon cache."; \
