--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -292,7 +292,13 @@ DISTCLEANFILES =						\
 			$(schemas_DATA)
 
 
-gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+gtk_update_icon_test=$(datadir)/icons/hicolor/scalable/apps/get2gnow.svg
+ifeq ($(gtk_update_icon_test),$(datadir)/icons/hicolor/scalable/apps/get2gnow.svg)
+	gtk_update_icon_cache=gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+else
+	gtk_update_icon_cache="get2gnow's icon is already installed."
+endif
+
 all: all-am
 
 .SUFFIXES:
@@ -464,7 +470,7 @@ installdirs:
 	done
 install: install-am
 install-exec: install-exec-am
-install-data: install-data-am
+install-data: update-icon-cache install-data-am
 uninstall: uninstall-am
 
 install-am: all-am
