--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -34,7 +34,7 @@ build_triplet = @build@
 host_triplet = @host@
 subdir = data
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
-	$(srcdir)/get2gnow.desktop.in
+	$(srcdir)/@PACKAGE_NAME@.desktop.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/gnome-doc-utils.m4 \
 	$(top_srcdir)/m4/intltool.m4 $(top_srcdir)/configure.in
@@ -42,7 +42,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES = get2gnow.desktop
+CONFIG_CLEAN_FILES = @PACKAGE_NAME@.desktop
 SOURCES =
 DIST_SOURCES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
@@ -241,16 +241,16 @@ top_srcdir = @top_srcdir@
 
 
 desktopdir = $(datadir)/applications
-desktop_in_files = get2gnow.desktop.in
+desktop_in_files = @PACKAGE_NAME@.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 
 
 schemasdir = $(GCONF_SCHEMA_FILE_DIR)
-schemas_in_files = get2gnow.schemas.in
+schemas_in_files = @PACKAGE_NAME@.schemas.in
 schemas_DATA = $(schemas_in_files:.schemas.in=.schemas)
 
 
-gtkbuilderdir = $(datadir)/get2gnow
+gtkbuilderdir = $(datadir)/@PACKAGE_NAME@
 gtkbuilder_DATA =	 					\
 			online-services-dialog.ui		\
 			main-window.ui				\
@@ -261,24 +261,20 @@ gtkbuilder_DATA =	 					\
 
 sexy_DATA =							\
 			tweet-list.ui				\
-			friends-manager.ui			\
-			following-viewer.ui
+			friends-manager.ui
 
 un_sexy_DATA =							\
 			tweet-list.in.ui			\
-			friends-manager.in.ui			\
-			following-viewer.in.ui
+			friends-manager.in.ui
 
 tweet-list.ui:
 	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! tweet-list.ui' 'tweet-list.in.ui';
 friends-manager.ui:
 	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! friends-manager.ui' 'friends-manager.in.ui';
-following-viewer.ui:
-	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! following-viewer.ui' 'following-viewer.in.ui';
 sexy_DATA: $(un_sexy_DATA)
 
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
-svgicon_DATA = get2gnow.svg
+svgicon_DATA = @PACKAGE_NAME@.svg
 EXTRA_DIST =							\
 			$(sexy_DATA)				\
 			$(gtkbuilder_DATA)			\
@@ -291,12 +287,12 @@ DISTCLEANFILES =						\
 			$(desktop_DATA)				\
 			$(schemas_DATA)
 
-
-gtk_update_icon_test=$(datadir)/icons/hicolor/scalable/apps/get2gnow.svg
-ifeq ($(gtk_update_icon_test),$(datadir)/icons/hicolor/scalable/apps/get2gnow.svg)
-	gtk_update_icon_cache=gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+gtk_update_icon_cache:
+gtk_update_icon_test=$(shell /bin/ls $(datadir)/icons/hicolor/scalable/apps/@PACKAGE_NAME@.svg)
+ifeq ($(gtk_update_icon_test),$(datadir)/icons/hicolor/scalable/apps/@PACKAGE_NAME@.svg)
+	gtk_update_icon_cache=echo "$(PACKAGE_NAME) icon already installed."
 else
-	gtk_update_icon_cache="get2gnow's icon is already installed."
+	gtk_update_icon_cache=gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 endif
 
 all: all-am
@@ -331,7 +327,7 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
-get2gnow.desktop: $(top_builddir)/config.status $(srcdir)/get2gnow.desktop.in
+@PACKAGE_NAME@.desktop: $(top_builddir)/config.status $(srcdir)/@PACKAGE_NAME@.desktop.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
 mostlyclean-libtool:
@@ -470,7 +466,7 @@ installdirs:
 	done
 install: install-am
 install-exec: install-exec-am
-install-data: update-icon-cache install-data-am
+install-data: gtk_update_icon_cache install-data-am
 uninstall: uninstall-am
 
 install-am: all-am
@@ -575,6 +571,10 @@ uninstall-am: uninstall-desktopDATA uninstall-sexyDATA uninstall-gtkbuilderDATA 
 @INTLTOOL_DESKTOP_RULE@
 @INTLTOOL_SCHEMAS_RULE@
 
+uninstall-gconf-data:
+	gconftool-2 --recursive-unset /schemas/apps/@PACKAGE_NAME@
+	gconftool-2 --recursive-unset /apps/@PACKAGE_NAME@
+uninstall-data: uninstall-gconf-data uninstall-data-am
 install-data-hook: update-icon-cache
 uninstall-hook: update-icon-cache
 update-icon-cache:
