--- a/Makefile.in
+++ b/Makefile.in
@@ -649,10 +649,10 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
-clean: clean-recursive
-	gconftool-2 --recursive-unset /apps/get2gnow/debug
-	if( -d "~/.gnome2/get2gnow/debug" ) rm -r ~/.gnome2/get2gnow/debug ;
-	
+clean-debug:
+	-gconftool-2 --recursive-unset /apps/get2gnow/debug
+	-test -d "~/.gnome2/get2gnow/debug" || rm -rf ~/.gnome2/get2gnow/debug ;
+clean: clean-recursive clean-debug
 clean-am: clean-generic clean-libtool mostlyclean-am
 
 distclean: distclean-recursive
