--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -261,16 +261,20 @@ gtkbuilder_DATA =	 					\
 
 sexy_DATA =							\
 			tweet-list.ui				\
-			friends-manager.ui
+			friends-manager.ui			\
+			following-viewer.ui
 
 un_sexy_DATA =							\
 			tweet-list.in.ui			\
-			friends-manager.in.ui
+			friends-manager.in.ui			\
+			following-viewer.in.ui
 
 tweet-list.ui:
 	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! tweet-list.ui' 'tweet-list.in.ui';
 friends-manager.ui:
 	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! friends-manager.ui' 'friends-manager.in.ui';
+following-viewer.ui:
+	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! following-viewer.ui' 'following-viewer.in.ui';
 sexy_DATA: $(un_sexy_DATA)
 
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
@@ -287,7 +291,7 @@ DISTCLEANFILES =						\
 			$(desktop_DATA)				\
 			$(schemas_DATA)
 
-gtk_update_icon_cache:
+gtk-update-icon-cache:
 gtk_update_icon_test=$(shell /bin/ls $(datadir)/icons/hicolor/scalable/apps/@PACKAGE_NAME@.svg)
 ifeq ($(gtk_update_icon_test),$(datadir)/icons/hicolor/scalable/apps/@PACKAGE_NAME@.svg)
 	gtk_update_icon_cache=echo "$(PACKAGE_NAME) icon already installed."
@@ -354,6 +358,13 @@ uninstall-desktopDATA:
 	  rm -f "$(DESTDIR)$(desktopdir)/$$f"; \
 	done
 
+clean-sexy-data: $(sexy_DATA)
+	@list='$(sexy_DATA)'; for p in $$list; do \
+		if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+		f=$(am__strip_dir) \
+		echo "rm '$$d$$p'"; \
+		rm "$$d$$p"; \
+	done
 install-sexyDATA: $(sexy_DATA)
 	@$(NORMAL_INSTALL)
 	test -z "$(gtkbuilderdir)" || $(MKDIR_P) "$(DESTDIR)$(gtkbuilderdir)"
@@ -363,7 +374,6 @@ install-sexyDATA: $(sexy_DATA)
 		echo " $(sexyDATA_INSTALL) '$$d$$p' '$(DESTDIR)$(gtkbuilderdir)/$$f'"; \
 		$(sexyDATA_INSTALL) "$$d$$p" "$(DESTDIR)$(gtkbuilderdir)/$$f"; \
 	done
-
 uninstall-sexyDATA:
 	@$(NORMAL_UNINSTALL)
 	@list='$(sexy_DATA)'; for p in $$list; do \
@@ -466,7 +476,7 @@ installdirs:
 	done
 install: install-am
 install-exec: install-exec-am
-install-data: gtk_update_icon_cache install-data-am
+install-data: gtk-update-icon-cache install-data-am
 uninstall: uninstall-am
 
 install-am: all-am
@@ -489,7 +499,7 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
-clean: clean-am
+clean: clean-sexy-data clean-am
 
 clean-am: clean-generic clean-libtool mostlyclean-am
 
