--- a/Makefile.in
+++ b/Makefile.in
@@ -627,7 +627,13 @@ installdirs-am:
 install: install-recursive
 install-exec: install-exec-recursive
 install-data: install-data-recursive
-uninstall: uninstall-recursive
+
+uninstall-gconf:
+	-gconftool-2 --recursive-unset /schemas/get2gnow
+	-gconftool-2 --recursive-unset /apps/get2gnow
+uninstall-cache-dir:
+	if test -d "~/.gnome2/get2gnow"; then rm -rf ~/.gnome2/get2gnow; fi
+uninstall: uninstall-gconf uninstall-cache-dir uninstall-recursive
 
 install-am: all-am
 	@$(MAKE) $(AM_MAKEFLAGS) install-exec-am install-data-am
@@ -650,6 +656,7 @@ maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
 clean-debug:
+	-gconftool-2 --recursive-unset /schemas/get2gnow/debug
 	-gconftool-2 --recursive-unset /apps/get2gnow/debug
 	-test -d "~/.gnome2/get2gnow/debug" || rm -rf ~/.gnome2/get2gnow/debug ;
 clean: clean-recursive clean-debug
