--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -34,7 +34,7 @@ build_triplet = @build@
 host_triplet = @host@
 subdir = data
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
-	$(srcdir)/@PACKAGE_NAME@.desktop.in
+	$(srcdir)/@PACKAGE_NAME@.desktop.in $(srcdir)/@PACKAGE_NAME@.schemas.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/gnome-doc-utils.m4 \
 	$(top_srcdir)/m4/intltool.m4 $(top_srcdir)/configure.in
@@ -42,7 +42,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES = @PACKAGE_NAME@.desktop
+CONFIG_CLEAN_FILES = @PACKAGE_NAME@.desktop $(srcdir)/@PACKAGE_NAME@.schemas
 SOURCES =
 DIST_SOURCES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
@@ -332,6 +332,8 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 @PACKAGE_NAME@.desktop: $(top_builddir)/config.status $(srcdir)/@PACKAGE_NAME@.desktop.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+@PACKAGE_NAME@.schemas: $(top_builddir)/config.status $(srcdir)/@PACKAGE_NAME@.schemas.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
 mostlyclean-libtool:
