get2gnow #00EEEDa09 - making it EEEsy(like you could've resisted it)
I finally installed get2gnow on my EEE.  I've added & udpated my dependancy checking.

I've also fixed an install bug when installing get2gnow's icon.  Now make install runs get-icon-update-cache w/o checking if it was actually installed.  It was the only way I could be sure GTK+'s icon cache is updated.

I'd like to improve this w/a check in ./configure & data/Makefile.* but reliably working is better than random, even if it makes installation a lil redundant & slower.

--- a/configure.in
+++ b/configure.in
@@ -36,7 +36,9 @@ dnl  ************************************************************/
 
 LIBSOUP_VERSION_REQUIRED=2.24.0
 LIBXML_VERSION_REQUIRED=2.6.16
-GTK_VERSION_REQUIRED=2.12.12
+GTK_VERSION_REQUIRED=2.16
+GLIB_VERSION_REQUIRED=2.20
+GTHREAD_VERSION_REQUIRED=2.20
 GCONF_VERSION_REQUIRED=1.2.0
 LIBGIO_VERSION_REQUIRED=2.15.5
 LIBCANBERRA_VERSION_REQUIRED=0.4
@@ -86,7 +88,7 @@ PKG_CHECK_MODULES(get2gnow,
 	libxml-2.0 >= $LIBXML_VERSION_REQUIRED
 	gobject-2.0
 	libgnomeui-2.0
-	gthread-2.0
+	gthread-2.0 >= $GTHREAD_VERSION_REGUIRED
 	gconf-2.0 >= $GCONF_VERSION_REQUIRED
 	$gnome_keyring_pkgconfig
 ])
