--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -31,14 +31,6 @@ un_sexy_DATA =							\
 			friends-manager.in.ui			\
 			following-viewer.in.ui
 
-tweet-list.ui:
-	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! tweet-list.ui' 'tweet-list.in.ui';
-friends-manager.ui:
-	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! friends-manager.ui' 'friends-manager.in.ui';
-following-viewer.ui:
-	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! following-viewer.ui' 'following-viewer.in.ui';
-sexy_DATA: $(un_sexy_DATA)
-
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
 svgicon_DATA = @PACKAGE_NAME@.svg
 
@@ -58,12 +50,25 @@ DISTCLEANFILES =						\
 
 gtk_update_icon_cache=gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
-clean-sexy-data: $(sexy_DATA)
-	@list='$(sexy_DATA)'; for p in $$list; do \
+
+tweet-list.ui: sexy_DATA
+sexy_DATA: $(un_sexy_DATA)
+	@eol='$$'; \
+	list='$(un_sexy_DATA)'; for p in $$list; do \
 		if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-		f=$(am__strip_dir) \
-		echo "rm '$$d$$p'"; \
-		rm "$$d$$p"; \
+		f=`echo $$d$$p | sed 's/\.in//'`; \
+		if ! test -f $$f; then \
+			echo "ex -n -s -E '+1,$${eol}s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! $$f' '$$d$$p';'"; \
+			ex -n -s -E '+1,${eol}s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' "+wq! $$f" "$$d$$p"; \
+		fi; \
+	done
+clean-sexy-data:
+	@list='$(sexy_DATA)'; for p in $$list; do \
+		if test -f "$$p"; then d=; else d="$(subdir)/"; fi; \
+		if test -f $$d$$p; then \
+			echo "rm '$$d$$p'"; \
+			rm "$$d$$p"; \
+		fi; \
 	done
 clean: clean-sexy-data clean-am
 
