--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -269,14 +269,6 @@ un_sexy_DATA =							\
 			friends-manager.in.ui			\
 			following-viewer.in.ui
 
-tweet-list.ui:
-	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! tweet-list.ui' 'tweet-list.in.ui';
-friends-manager.ui:
-	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! friends-manager.ui' 'friends-manager.in.ui';
-following-viewer.ui:
-	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! following-viewer.ui' 'following-viewer.in.ui';
-sexy_DATA: $(un_sexy_DATA)
-
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
 svgicon_DATA = @PACKAGE_NAME@.svg
 EXTRA_DIST =							\
@@ -354,12 +346,27 @@ uninstall-desktopDATA:
 	  rm -f "$(DESTDIR)$(desktopdir)/$$f"; \
 	done
 
-clean-sexy-data: $(sexy_DATA)
-	@list='$(sexy_DATA)'; for p in $$list; do \
+
+tweet-list.ui: sexy_DATA
+friends-manager.ui: sexy_DATA
+following-viewer.ui: sexy_DATA
+sexy_DATA: $(un_sexy_DATA)
+	@eol='$$'; \
+	list='$(un_sexy_DATA)'; for p in $$list; do \
 		if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-		f=$(am__strip_dir) \
-		echo "rm '$$d$$p'"; \
-		rm "$$d$$p"; \
+		f=`echo $$d$$p | sed 's/\.in//'`; \
+		if ! test -f $$f; then \
+			echo "ex -n -s -E '+1,$${eol}s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! $$f' '$$d$$p';'"; \
+			ex -n -s -E '+1,${eol}s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' "+wq! $$f" "$$d$$p"; \
+		fi; \
+	done
+clean-sexy-data:
+	@list='$(sexy_DATA)'; for p in $$list; do \
+		if test -f "$$p"; then d=; else d="$(subdir)/"; fi; \
+		if test -f $$d$$p; then \
+			echo "rm '$$d$$p'"; \
+			rm "$$d$$p"; \
+		fi; \
 	done
 install-sexyDATA: $(sexy_DATA)
 	@$(NORMAL_INSTALL)
@@ -490,7 +497,7 @@ clean-generic:
 
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
-	-test -z "$(DISTCLEANFILES)" || rm -f $(DISTCLEANFILES)
+	-test -z "$(DISTCLEANFILES)" || echo "rm -f $(DISTCLEANFILES)" ; rm -f $(DISTCLEANFILES)
 
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
@@ -541,7 +548,7 @@ maintainer-clean-am: distclean-am maintainer-clean-generic
 
 mostlyclean: mostlyclean-am
 
-mostlyclean-am: mostlyclean-generic mostlyclean-libtool
+mostlyclean-am: clean-sexy-data mostlyclean-generic mostlyclean-libtool
 
 pdf: pdf-am
 
